# LC_rotations_3d

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/LC/geometry/rotations/: Placement3D.hpp  Rotation3D.hpp
